--- a/style.css
+++ b/style.css
@@ -37,11 +37,12 @@ h1,
 h2,
 h4 {
   font-weight: var(--fw-bold);
+  line-height: 150%;
 }
 
-h3,
 p {
   font-weight: var(--fw-regular);
+  line-height: 150%;
 }
 
 main {
@@ -51,12 +52,12 @@ main {
 
 .testimonial-card {
   margin: 3.5em 3em;
-  padding: 2.6em;
+  padding: 2.2em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 2rem;
+  gap: 1rem;
   border-radius: 1rem;
   box-shadow: 0 1.5em 2.5em -1em rgba(0, 0, 0, 0.3);
 }
@@ -80,7 +81,7 @@ main {
 
 .testimonial-role {
   font-size: 0.85rem;
-  padding-top: 0.3em;
+  padding-top: 0.15em;
   color: var(--grey-200);
 }
 
@@ -146,8 +147,13 @@ main {
   }
 
   .testimonial-card:nth-child(1) {
-    grid-area: card-1;
-  }
+  grid-area: card-1;
+  background-image: url(./images/bg-pattern-quotation.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-position-x: 80%;
+}
+
 
   .testimonial-card:nth-child(2) {
     grid-area: card-2;
